parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    MULTI
    RESTA
    DIV
    SUMA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO funcAgregarInicio bloque FIN
Rule 2     programa -> INICIO FIN
Rule 3     programa -> funcion programa
Rule 4     funcAgregarInicio -> <empty>
Rule 5     bloque -> { vars estatuto }
Rule 6     bloque -> { vars }
Rule 7     bloque -> { }
Rule 8     vars -> tipo ID guardarIDs ; masTipos
Rule 9     vars -> tipo ID guardarIDs arreglo ; masTipos
Rule 10    vars -> tipo listaIDS ; masTipos
Rule 11    masTipos -> vars
Rule 12    masTipos -> empty
Rule 13    listaIDS -> ID guardarIDs masIDS
Rule 14    masIDS -> , ID guardarIDs
Rule 15    masIDS -> empty
Rule 16    arreglo -> [ CTI ] matriz
Rule 17    matriz -> [ CTI ]
Rule 18    matriz -> empty
Rule 19    funcion -> FUNC tipo ID funcAgregar ( param ) bloquefunc
Rule 20    funcAgregar -> <empty>
Rule 21    param -> tipo listapaID
Rule 22    listapaID -> ID guardarIDs maspaID maspaTip
Rule 23    guardarIDs -> <empty>
Rule 24    maspaID -> , ID guardarIDs
Rule 25    maspaID -> empty
Rule 26    maspaTip -> vars
Rule 27    maspaTip -> empty
Rule 28    bloquefunc -> { vars estatuto regresa }
Rule 29    bloquefunc -> { vars regresa }
Rule 30    bloquefunc -> { escritura regresa }
Rule 31    bloquefunc -> { }
Rule 32    regresa -> RETURN ID
Rule 33    estatuto -> asignacion estatutoAux
Rule 34    estatuto -> escritura estatutoAux
Rule 35    estatuto -> condicion estatutoAux
Rule 36    estatuto -> lectura estatutoAux
Rule 37    estatuto -> whiles estatutoAux
Rule 38    estatuto -> fors estatutoAux
Rule 39    estatutoAux -> estatuto
Rule 40    estatutoAux -> empty
Rule 41    asignacion -> ID opcionAsignacion valorAsig ;
Rule 42    asignacion -> ID ;
Rule 43    opcionAsignacion -> [ CTI ]
Rule 44    opcionAsignacion -> [ CTI ] [ CTI ]
Rule 45    opcionAsignacion -> empty
Rule 46    valorAsig -> = exp
Rule 47    valorAsig -> empty
Rule 48    lectura -> LEER ID opcionesLectura ;
Rule 49    opcionesLectura -> [ CTI ]
Rule 50    opcionesLectura -> [ CTI ] [ CTI ]
Rule 51    opcionesLectura -> empty
Rule 52    escritura -> DIBUJAR ( ID pos color ) ;
Rule 53    escritura -> mueve
Rule 54    color -> AMARILLO
Rule 55    color -> VERDE
Rule 56    color -> ROJO
Rule 57    color -> AZUL
Rule 58    condicion -> IF ( expresion ) bloque
Rule 59    condicion -> IF ( expresion ) bloque ELSE bloque
Rule 60    expresion -> exp > exp
Rule 61    expresion -> exp < exp
Rule 62    expresion -> exp MENORIGUAL exp
Rule 63    expresion -> exp MAYORIGUAL exp
Rule 64    expresion -> exp IGUALIGUAL exp
Rule 65    expresion -> exp DIFERENTE exp
Rule 66    expresion -> exp COOR exp
Rule 67    expresion -> exp COAND exp
Rule 68    exp -> fondoFalso expresion finFondoFalso
Rule 69    exp -> fondoFalso varcte operacion finFondoFalso
Rule 70    exp -> varcte operacion
Rule 71    exp -> varcte
Rule 72    exp -> empty
Rule 73    fondoFalso -> (
Rule 74    finFondoFalso -> )
Rule 75    operacion -> termino checaroperador4
Rule 76    operacion -> termino checaroperador4 signo
Rule 77    checaroperador4 -> <empty>
Rule 78    signo -> + exp
Rule 79    signo -> - exp
Rule 80    termino -> factor checaroperador5
Rule 81    termino -> factor checaroperador5 masop
Rule 82    checaroperador5 -> <empty>
Rule 83    masop -> * termino
Rule 84    masop -> / termino
Rule 85    factor -> fondoFalso expresion finFondoFalso
Rule 86    factor -> varcte
Rule 87    factor -> signo
Rule 88    factor -> signo varcte
Rule 89    fors -> FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
Rule 90    pos -> ( varcte , varcte )
Rule 91    whiles -> WHILE ( expresion ) bloque
Rule 92    varcte -> recibe_ID
Rule 93    varcte -> recibe_CTF
Rule 94    varcte -> recibe_CTI
Rule 95    varcte -> recibe_CTS
Rule 96    varcte -> recibe_TRUE
Rule 97    varcte -> recibe_FALSE
Rule 98    recibe_ID -> ID
Rule 99    recibe_CTF -> CTF
Rule 100   recibe_CTI -> CTI
Rule 101   recibe_CTS -> CTS
Rule 102   recibe_TRUE -> TRUE
Rule 103   recibe_FALSE -> FALSE
Rule 104   tipo -> ENTERO
Rule 105   tipo -> DECIMAL
Rule 106   tipo -> BOOL
Rule 107   tipo -> VOID
Rule 108   tipo -> CUADRADO
Rule 109   tipo -> RECTANGULO
Rule 110   tipo -> CIRCULO
Rule 111   tipo -> LINEA
Rule 112   tipo -> ESTRELLA
Rule 113   mueve -> MUEVE opcionMue
Rule 114   opcionMue -> IZQUIERDA ID CTI ;
Rule 115   opcionMue -> DERECHA ID CTI ;
Rule 116   opcionMue -> ARRIBA ID CTI ;
Rule 117   opcionMue -> ABAJO ID CTI ;
Rule 118   empty -> <empty>

Terminals, with rules where they appear

(                    : 19 52 58 59 73 90 91
)                    : 19 52 58 59 74 90 91
*                    : 83
+                    : 78
,                    : 14 24 90
-                    : 79
/                    : 84
;                    : 8 9 10 41 42 48 52 89 114 115 116 117
<                    : 61
=                    : 46
>                    : 60
ABAJO                : 117
AMARILLO             : 54
ARRIBA               : 116
AZUL                 : 57
BOOL                 : 106
CIRCULO              : 110
COAND                : 67
COOR                 : 66
CTF                  : 99
CTI                  : 16 17 43 44 44 49 50 50 100 114 115 116 117
CTS                  : 101
CUADRADO             : 108
DECIMAL              : 105
DERECHA              : 115
DIBUJAR              : 52
DIFERENTE            : 65
DIV                  : 
ELSE                 : 59
ENTERO               : 104
ESTRELLA             : 112
FALSE                : 103
FIN                  : 1 2
FOR                  : 89
FUNC                 : 19
ID                   : 8 9 13 14 19 22 24 32 41 42 48 52 98 114 115 116 117
IF                   : 58 59
IGUALIGUAL           : 64
INICIO               : 1 2
IZQUIERDA            : 114
LEER                 : 48
LINEA                : 111
MAYORIGUAL           : 63
MENORIGUAL           : 62
MUEVE                : 113
MULTI                : 
RECTANGULO           : 109
RESTA                : 
RETURN               : 32
ROJO                 : 56
SUMA                 : 
TRUE                 : 102
VERDE                : 55
VOID                 : 107
WHILE                : 91
[                    : 16 17 43 44 44 49 50 50
]                    : 16 17 43 44 44 49 50 50
error                : 
{                    : 5 6 7 28 29 30 31
}                    : 5 6 7 28 29 30 31

Nonterminals, with rules where they appear

arreglo              : 9
asignacion           : 33 89 89
bloque               : 1 58 59 59 89 91
bloquefunc           : 19
checaroperador4      : 75 76
checaroperador5      : 80 81
color                : 52
condicion            : 35
empty                : 12 15 18 25 27 40 45 47 51 72
escritura            : 30 34
estatuto             : 5 28 39
estatutoAux          : 33 34 35 36 37 38
exp                  : 46 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 78 79
expresion            : 58 59 68 85 89 91
factor               : 80 81
finFondoFalso        : 68 69 85 89
fondoFalso           : 68 69 85 89
fors                 : 38
funcAgregar          : 19
funcAgregarInicio    : 1
funcion              : 3
guardarIDs           : 8 9 13 14 22 24
lectura              : 36
listaIDS             : 10
listapaID            : 21
masIDS               : 13
masTipos             : 8 9 10
masop                : 81
maspaID              : 22
maspaTip             : 22
matriz               : 16
mueve                : 53
opcionAsignacion     : 41
opcionMue            : 113
opcionesLectura      : 48
operacion            : 69 70
param                : 19
pos                  : 52
programa             : 3 0
recibe_CTF           : 93
recibe_CTI           : 94
recibe_CTS           : 95
recibe_FALSE         : 97
recibe_ID            : 92
recibe_TRUE          : 96
regresa              : 28 29 30
signo                : 76 87 88
termino              : 75 76 83 84
tipo                 : 8 9 10 19 21
valorAsig            : 41
varcte               : 69 70 71 86 88 90 90
vars                 : 5 6 11 26 28 29
whiles               : 37

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO funcAgregarInicio bloque FIN
    (2) programa -> . INICIO FIN
    (3) programa -> . funcion programa
    (19) funcion -> . FUNC tipo ID funcAgregar ( param ) bloquefunc

    INICIO          shift and go to state 3
    FUNC            shift and go to state 2

    programa                       shift and go to state 1
    funcion                        shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (19) funcion -> FUNC . tipo ID funcAgregar ( param ) bloquefunc
    (104) tipo -> . ENTERO
    (105) tipo -> . DECIMAL
    (106) tipo -> . BOOL
    (107) tipo -> . VOID
    (108) tipo -> . CUADRADO
    (109) tipo -> . RECTANGULO
    (110) tipo -> . CIRCULO
    (111) tipo -> . LINEA
    (112) tipo -> . ESTRELLA

    ENTERO          shift and go to state 14
    DECIMAL         shift and go to state 6
    BOOL            shift and go to state 11
    VOID            shift and go to state 9
    CUADRADO        shift and go to state 10
    RECTANGULO      shift and go to state 8
    CIRCULO         shift and go to state 13
    LINEA           shift and go to state 12
    ESTRELLA        shift and go to state 7

    tipo                           shift and go to state 5

state 3

    (1) programa -> INICIO . funcAgregarInicio bloque FIN
    (2) programa -> INICIO . FIN
    (4) funcAgregarInicio -> .

    FIN             shift and go to state 16
    {               reduce using rule 4 (funcAgregarInicio -> .)

    funcAgregarInicio              shift and go to state 15

state 4

    (3) programa -> funcion . programa
    (1) programa -> . INICIO funcAgregarInicio bloque FIN
    (2) programa -> . INICIO FIN
    (3) programa -> . funcion programa
    (19) funcion -> . FUNC tipo ID funcAgregar ( param ) bloquefunc

    INICIO          shift and go to state 3
    FUNC            shift and go to state 2

    programa                       shift and go to state 17
    funcion                        shift and go to state 4

state 5

    (19) funcion -> FUNC tipo . ID funcAgregar ( param ) bloquefunc

    ID              shift and go to state 18


state 6

    (105) tipo -> DECIMAL .

    ID              reduce using rule 105 (tipo -> DECIMAL .)


state 7

    (112) tipo -> ESTRELLA .

    ID              reduce using rule 112 (tipo -> ESTRELLA .)


state 8

    (109) tipo -> RECTANGULO .

    ID              reduce using rule 109 (tipo -> RECTANGULO .)


state 9

    (107) tipo -> VOID .

    ID              reduce using rule 107 (tipo -> VOID .)


state 10

    (108) tipo -> CUADRADO .

    ID              reduce using rule 108 (tipo -> CUADRADO .)


state 11

    (106) tipo -> BOOL .

    ID              reduce using rule 106 (tipo -> BOOL .)


state 12

    (111) tipo -> LINEA .

    ID              reduce using rule 111 (tipo -> LINEA .)


state 13

    (110) tipo -> CIRCULO .

    ID              reduce using rule 110 (tipo -> CIRCULO .)


state 14

    (104) tipo -> ENTERO .

    ID              reduce using rule 104 (tipo -> ENTERO .)


state 15

    (1) programa -> INICIO funcAgregarInicio . bloque FIN
    (5) bloque -> . { vars estatuto }
    (6) bloque -> . { vars }
    (7) bloque -> . { }

    {               shift and go to state 20

    bloque                         shift and go to state 19

state 16

    (2) programa -> INICIO FIN .

    $end            reduce using rule 2 (programa -> INICIO FIN .)


state 17

    (3) programa -> funcion programa .

    $end            reduce using rule 3 (programa -> funcion programa .)


state 18

    (19) funcion -> FUNC tipo ID . funcAgregar ( param ) bloquefunc
    (20) funcAgregar -> .

    (               reduce using rule 20 (funcAgregar -> .)

    funcAgregar                    shift and go to state 21

state 19

    (1) programa -> INICIO funcAgregarInicio bloque . FIN

    FIN             shift and go to state 22


state 20

    (5) bloque -> { . vars estatuto }
    (6) bloque -> { . vars }
    (7) bloque -> { . }
    (8) vars -> . tipo ID guardarIDs ; masTipos
    (9) vars -> . tipo ID guardarIDs arreglo ; masTipos
    (10) vars -> . tipo listaIDS ; masTipos
    (104) tipo -> . ENTERO
    (105) tipo -> . DECIMAL
    (106) tipo -> . BOOL
    (107) tipo -> . VOID
    (108) tipo -> . CUADRADO
    (109) tipo -> . RECTANGULO
    (110) tipo -> . CIRCULO
    (111) tipo -> . LINEA
    (112) tipo -> . ESTRELLA

    }               shift and go to state 25
    ENTERO          shift and go to state 14
    DECIMAL         shift and go to state 6
    BOOL            shift and go to state 11
    VOID            shift and go to state 9
    CUADRADO        shift and go to state 10
    RECTANGULO      shift and go to state 8
    CIRCULO         shift and go to state 13
    LINEA           shift and go to state 12
    ESTRELLA        shift and go to state 7

    vars                           shift and go to state 23
    tipo                           shift and go to state 24

state 21

    (19) funcion -> FUNC tipo ID funcAgregar . ( param ) bloquefunc

    (               shift and go to state 26


state 22

    (1) programa -> INICIO funcAgregarInicio bloque FIN .

    $end            reduce using rule 1 (programa -> INICIO funcAgregarInicio bloque FIN .)


state 23

    (5) bloque -> { vars . estatuto }
    (6) bloque -> { vars . }
    (33) estatuto -> . asignacion estatutoAux
    (34) estatuto -> . escritura estatutoAux
    (35) estatuto -> . condicion estatutoAux
    (36) estatuto -> . lectura estatutoAux
    (37) estatuto -> . whiles estatutoAux
    (38) estatuto -> . fors estatutoAux
    (41) asignacion -> . ID opcionAsignacion valorAsig ;
    (42) asignacion -> . ID ;
    (52) escritura -> . DIBUJAR ( ID pos color ) ;
    (53) escritura -> . mueve
    (58) condicion -> . IF ( expresion ) bloque
    (59) condicion -> . IF ( expresion ) bloque ELSE bloque
    (48) lectura -> . LEER ID opcionesLectura ;
    (91) whiles -> . WHILE ( expresion ) bloque
    (89) fors -> . FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (113) mueve -> . MUEVE opcionMue

    }               shift and go to state 41
    ID              shift and go to state 35
    DIBUJAR         shift and go to state 39
    IF              shift and go to state 36
    LEER            shift and go to state 37
    WHILE           shift and go to state 27
    FOR             shift and go to state 32
    MUEVE           shift and go to state 40

    asignacion                     shift and go to state 38
    mueve                          shift and go to state 29
    estatuto                       shift and go to state 28
    whiles                         shift and go to state 33
    condicion                      shift and go to state 30
    fors                           shift and go to state 34
    lectura                        shift and go to state 31
    escritura                      shift and go to state 42

state 24

    (8) vars -> tipo . ID guardarIDs ; masTipos
    (9) vars -> tipo . ID guardarIDs arreglo ; masTipos
    (10) vars -> tipo . listaIDS ; masTipos
    (13) listaIDS -> . ID guardarIDs masIDS

    ID              shift and go to state 44

    listaIDS                       shift and go to state 43

state 25

    (7) bloque -> { } .

    ID              reduce using rule 7 (bloque -> { } .)
    DIBUJAR         reduce using rule 7 (bloque -> { } .)
    IF              reduce using rule 7 (bloque -> { } .)
    LEER            reduce using rule 7 (bloque -> { } .)
    WHILE           reduce using rule 7 (bloque -> { } .)
    FOR             reduce using rule 7 (bloque -> { } .)
    MUEVE           reduce using rule 7 (bloque -> { } .)
    }               reduce using rule 7 (bloque -> { } .)
    RETURN          reduce using rule 7 (bloque -> { } .)
    FIN             reduce using rule 7 (bloque -> { } .)
    ELSE            reduce using rule 7 (bloque -> { } .)


state 26

    (19) funcion -> FUNC tipo ID funcAgregar ( . param ) bloquefunc
    (21) param -> . tipo listapaID
    (104) tipo -> . ENTERO
    (105) tipo -> . DECIMAL
    (106) tipo -> . BOOL
    (107) tipo -> . VOID
    (108) tipo -> . CUADRADO
    (109) tipo -> . RECTANGULO
    (110) tipo -> . CIRCULO
    (111) tipo -> . LINEA
    (112) tipo -> . ESTRELLA

    ENTERO          shift and go to state 14
    DECIMAL         shift and go to state 6
    BOOL            shift and go to state 11
    VOID            shift and go to state 9
    CUADRADO        shift and go to state 10
    RECTANGULO      shift and go to state 8
    CIRCULO         shift and go to state 13
    LINEA           shift and go to state 12
    ESTRELLA        shift and go to state 7

    param                          shift and go to state 46
    tipo                           shift and go to state 45

state 27

    (91) whiles -> WHILE . ( expresion ) bloque

    (               shift and go to state 47


state 28

    (5) bloque -> { vars estatuto . }

    }               shift and go to state 48


state 29

    (53) escritura -> mueve .

    ID              reduce using rule 53 (escritura -> mueve .)
    DIBUJAR         reduce using rule 53 (escritura -> mueve .)
    IF              reduce using rule 53 (escritura -> mueve .)
    LEER            reduce using rule 53 (escritura -> mueve .)
    WHILE           reduce using rule 53 (escritura -> mueve .)
    FOR             reduce using rule 53 (escritura -> mueve .)
    MUEVE           reduce using rule 53 (escritura -> mueve .)
    }               reduce using rule 53 (escritura -> mueve .)
    RETURN          reduce using rule 53 (escritura -> mueve .)


state 30

    (35) estatuto -> condicion . estatutoAux
    (39) estatutoAux -> . estatuto
    (40) estatutoAux -> . empty
    (33) estatuto -> . asignacion estatutoAux
    (34) estatuto -> . escritura estatutoAux
    (35) estatuto -> . condicion estatutoAux
    (36) estatuto -> . lectura estatutoAux
    (37) estatuto -> . whiles estatutoAux
    (38) estatuto -> . fors estatutoAux
    (118) empty -> .
    (41) asignacion -> . ID opcionAsignacion valorAsig ;
    (42) asignacion -> . ID ;
    (52) escritura -> . DIBUJAR ( ID pos color ) ;
    (53) escritura -> . mueve
    (58) condicion -> . IF ( expresion ) bloque
    (59) condicion -> . IF ( expresion ) bloque ELSE bloque
    (48) lectura -> . LEER ID opcionesLectura ;
    (91) whiles -> . WHILE ( expresion ) bloque
    (89) fors -> . FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (113) mueve -> . MUEVE opcionMue

    }               reduce using rule 118 (empty -> .)
    RETURN          reduce using rule 118 (empty -> .)
    ID              shift and go to state 35
    DIBUJAR         shift and go to state 39
    IF              shift and go to state 36
    LEER            shift and go to state 37
    WHILE           shift and go to state 27
    FOR             shift and go to state 32
    MUEVE           shift and go to state 40

    asignacion                     shift and go to state 38
    mueve                          shift and go to state 29
    estatuto                       shift and go to state 49
    whiles                         shift and go to state 33
    condicion                      shift and go to state 30
    estatutoAux                    shift and go to state 51
    fors                           shift and go to state 34
    lectura                        shift and go to state 31
    empty                          shift and go to state 50
    escritura                      shift and go to state 42

state 31

    (36) estatuto -> lectura . estatutoAux
    (39) estatutoAux -> . estatuto
    (40) estatutoAux -> . empty
    (33) estatuto -> . asignacion estatutoAux
    (34) estatuto -> . escritura estatutoAux
    (35) estatuto -> . condicion estatutoAux
    (36) estatuto -> . lectura estatutoAux
    (37) estatuto -> . whiles estatutoAux
    (38) estatuto -> . fors estatutoAux
    (118) empty -> .
    (41) asignacion -> . ID opcionAsignacion valorAsig ;
    (42) asignacion -> . ID ;
    (52) escritura -> . DIBUJAR ( ID pos color ) ;
    (53) escritura -> . mueve
    (58) condicion -> . IF ( expresion ) bloque
    (59) condicion -> . IF ( expresion ) bloque ELSE bloque
    (48) lectura -> . LEER ID opcionesLectura ;
    (91) whiles -> . WHILE ( expresion ) bloque
    (89) fors -> . FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (113) mueve -> . MUEVE opcionMue

    }               reduce using rule 118 (empty -> .)
    RETURN          reduce using rule 118 (empty -> .)
    ID              shift and go to state 35
    DIBUJAR         shift and go to state 39
    IF              shift and go to state 36
    LEER            shift and go to state 37
    WHILE           shift and go to state 27
    FOR             shift and go to state 32
    MUEVE           shift and go to state 40

    asignacion                     shift and go to state 38
    mueve                          shift and go to state 29
    estatuto                       shift and go to state 49
    whiles                         shift and go to state 33
    condicion                      shift and go to state 30
    estatutoAux                    shift and go to state 52
    fors                           shift and go to state 34
    lectura                        shift and go to state 31
    empty                          shift and go to state 50
    escritura                      shift and go to state 42

state 32

    (89) fors -> FOR . fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (73) fondoFalso -> . (

    (               shift and go to state 53

    fondoFalso                     shift and go to state 54

state 33

    (37) estatuto -> whiles . estatutoAux
    (39) estatutoAux -> . estatuto
    (40) estatutoAux -> . empty
    (33) estatuto -> . asignacion estatutoAux
    (34) estatuto -> . escritura estatutoAux
    (35) estatuto -> . condicion estatutoAux
    (36) estatuto -> . lectura estatutoAux
    (37) estatuto -> . whiles estatutoAux
    (38) estatuto -> . fors estatutoAux
    (118) empty -> .
    (41) asignacion -> . ID opcionAsignacion valorAsig ;
    (42) asignacion -> . ID ;
    (52) escritura -> . DIBUJAR ( ID pos color ) ;
    (53) escritura -> . mueve
    (58) condicion -> . IF ( expresion ) bloque
    (59) condicion -> . IF ( expresion ) bloque ELSE bloque
    (48) lectura -> . LEER ID opcionesLectura ;
    (91) whiles -> . WHILE ( expresion ) bloque
    (89) fors -> . FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (113) mueve -> . MUEVE opcionMue

    }               reduce using rule 118 (empty -> .)
    RETURN          reduce using rule 118 (empty -> .)
    ID              shift and go to state 35
    DIBUJAR         shift and go to state 39
    IF              shift and go to state 36
    LEER            shift and go to state 37
    WHILE           shift and go to state 27
    FOR             shift and go to state 32
    MUEVE           shift and go to state 40

    asignacion                     shift and go to state 38
    mueve                          shift and go to state 29
    estatuto                       shift and go to state 49
    whiles                         shift and go to state 33
    condicion                      shift and go to state 30
    estatutoAux                    shift and go to state 55
    fors                           shift and go to state 34
    lectura                        shift and go to state 31
    empty                          shift and go to state 50
    escritura                      shift and go to state 42

state 34

    (38) estatuto -> fors . estatutoAux
    (39) estatutoAux -> . estatuto
    (40) estatutoAux -> . empty
    (33) estatuto -> . asignacion estatutoAux
    (34) estatuto -> . escritura estatutoAux
    (35) estatuto -> . condicion estatutoAux
    (36) estatuto -> . lectura estatutoAux
    (37) estatuto -> . whiles estatutoAux
    (38) estatuto -> . fors estatutoAux
    (118) empty -> .
    (41) asignacion -> . ID opcionAsignacion valorAsig ;
    (42) asignacion -> . ID ;
    (52) escritura -> . DIBUJAR ( ID pos color ) ;
    (53) escritura -> . mueve
    (58) condicion -> . IF ( expresion ) bloque
    (59) condicion -> . IF ( expresion ) bloque ELSE bloque
    (48) lectura -> . LEER ID opcionesLectura ;
    (91) whiles -> . WHILE ( expresion ) bloque
    (89) fors -> . FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (113) mueve -> . MUEVE opcionMue

    }               reduce using rule 118 (empty -> .)
    RETURN          reduce using rule 118 (empty -> .)
    ID              shift and go to state 35
    DIBUJAR         shift and go to state 39
    IF              shift and go to state 36
    LEER            shift and go to state 37
    WHILE           shift and go to state 27
    FOR             shift and go to state 32
    MUEVE           shift and go to state 40

    asignacion                     shift and go to state 38
    mueve                          shift and go to state 29
    estatuto                       shift and go to state 49
    whiles                         shift and go to state 33
    condicion                      shift and go to state 30
    estatutoAux                    shift and go to state 56
    fors                           shift and go to state 34
    lectura                        shift and go to state 31
    empty                          shift and go to state 50
    escritura                      shift and go to state 42

state 35

    (41) asignacion -> ID . opcionAsignacion valorAsig ;
    (42) asignacion -> ID . ;
    (43) opcionAsignacion -> . [ CTI ]
    (44) opcionAsignacion -> . [ CTI ] [ CTI ]
    (45) opcionAsignacion -> . empty
    (118) empty -> .

  ! shift/reduce conflict for ; resolved as shift
    ;               shift and go to state 59
    [               shift and go to state 60
    =               reduce using rule 118 (empty -> .)

  ! ;               [ reduce using rule 118 (empty -> .) ]

    opcionAsignacion               shift and go to state 57
    empty                          shift and go to state 58

state 36

    (58) condicion -> IF . ( expresion ) bloque
    (59) condicion -> IF . ( expresion ) bloque ELSE bloque

    (               shift and go to state 61


state 37

    (48) lectura -> LEER . ID opcionesLectura ;

    ID              shift and go to state 62


state 38

    (33) estatuto -> asignacion . estatutoAux
    (39) estatutoAux -> . estatuto
    (40) estatutoAux -> . empty
    (33) estatuto -> . asignacion estatutoAux
    (34) estatuto -> . escritura estatutoAux
    (35) estatuto -> . condicion estatutoAux
    (36) estatuto -> . lectura estatutoAux
    (37) estatuto -> . whiles estatutoAux
    (38) estatuto -> . fors estatutoAux
    (118) empty -> .
    (41) asignacion -> . ID opcionAsignacion valorAsig ;
    (42) asignacion -> . ID ;
    (52) escritura -> . DIBUJAR ( ID pos color ) ;
    (53) escritura -> . mueve
    (58) condicion -> . IF ( expresion ) bloque
    (59) condicion -> . IF ( expresion ) bloque ELSE bloque
    (48) lectura -> . LEER ID opcionesLectura ;
    (91) whiles -> . WHILE ( expresion ) bloque
    (89) fors -> . FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (113) mueve -> . MUEVE opcionMue

    }               reduce using rule 118 (empty -> .)
    RETURN          reduce using rule 118 (empty -> .)
    ID              shift and go to state 35
    DIBUJAR         shift and go to state 39
    IF              shift and go to state 36
    LEER            shift and go to state 37
    WHILE           shift and go to state 27
    FOR             shift and go to state 32
    MUEVE           shift and go to state 40

    asignacion                     shift and go to state 38
    mueve                          shift and go to state 29
    estatuto                       shift and go to state 49
    whiles                         shift and go to state 33
    condicion                      shift and go to state 30
    estatutoAux                    shift and go to state 63
    fors                           shift and go to state 34
    lectura                        shift and go to state 31
    empty                          shift and go to state 50
    escritura                      shift and go to state 42

state 39

    (52) escritura -> DIBUJAR . ( ID pos color ) ;

    (               shift and go to state 64


state 40

    (113) mueve -> MUEVE . opcionMue
    (114) opcionMue -> . IZQUIERDA ID CTI ;
    (115) opcionMue -> . DERECHA ID CTI ;
    (116) opcionMue -> . ARRIBA ID CTI ;
    (117) opcionMue -> . ABAJO ID CTI ;

    IZQUIERDA       shift and go to state 66
    DERECHA         shift and go to state 68
    ARRIBA          shift and go to state 67
    ABAJO           shift and go to state 65

    opcionMue                      shift and go to state 69

state 41

    (6) bloque -> { vars } .

    ID              reduce using rule 6 (bloque -> { vars } .)
    DIBUJAR         reduce using rule 6 (bloque -> { vars } .)
    IF              reduce using rule 6 (bloque -> { vars } .)
    LEER            reduce using rule 6 (bloque -> { vars } .)
    WHILE           reduce using rule 6 (bloque -> { vars } .)
    FOR             reduce using rule 6 (bloque -> { vars } .)
    MUEVE           reduce using rule 6 (bloque -> { vars } .)
    }               reduce using rule 6 (bloque -> { vars } .)
    RETURN          reduce using rule 6 (bloque -> { vars } .)
    FIN             reduce using rule 6 (bloque -> { vars } .)
    ELSE            reduce using rule 6 (bloque -> { vars } .)


state 42

    (34) estatuto -> escritura . estatutoAux
    (39) estatutoAux -> . estatuto
    (40) estatutoAux -> . empty
    (33) estatuto -> . asignacion estatutoAux
    (34) estatuto -> . escritura estatutoAux
    (35) estatuto -> . condicion estatutoAux
    (36) estatuto -> . lectura estatutoAux
    (37) estatuto -> . whiles estatutoAux
    (38) estatuto -> . fors estatutoAux
    (118) empty -> .
    (41) asignacion -> . ID opcionAsignacion valorAsig ;
    (42) asignacion -> . ID ;
    (52) escritura -> . DIBUJAR ( ID pos color ) ;
    (53) escritura -> . mueve
    (58) condicion -> . IF ( expresion ) bloque
    (59) condicion -> . IF ( expresion ) bloque ELSE bloque
    (48) lectura -> . LEER ID opcionesLectura ;
    (91) whiles -> . WHILE ( expresion ) bloque
    (89) fors -> . FOR fondoFalso asignacion expresion ; asignacion finFondoFalso bloque
    (113) mueve -> . MUEVE opcionMue

    }               reduce using rule 118 (empty -> .)
    RETURN          reduce using rule 118 (empty -> .)
    ID              shift and go to state 35
    DIBUJAR         shift and go to state 39
    IF              shift and go to state 36
    LEER            shift and go to state 37
    WHILE           shift and go to state 27
    FOR             shift and go to state 32
    MUEVE           shift and go to state 40

    asignacion                     shift and go to state 38
    mueve                          shift and go to state 29
    estatuto                       shift and go to state 49
    whiles                         shift and go to state 33
    condicion                      shift and go to state 30
    estatutoAux                    shift and go to state 70
    fors                           shift and go to state 34
    lectura                        shift and go to state 31
    empty                          shift and go to state 50
    escritura                      shift and go to state 42

state 43

    (10) vars -> tipo listaIDS . ; masTipos

    ;               shift and go to state 71


state 44

    (8) vars -> tipo ID . guardarIDs ; masTipos
    (9) vars -> tipo ID . guardarIDs arreglo ; masTipos
    (13) listaIDS -> ID . guardarIDs masIDS
    (23) guardarIDs -> .

    ;               reduce using rule 23 (guardarIDs -> .)
    [               reduce using rule 23 (guardarIDs -> .)
    ,               reduce using rule 23 (guardarIDs -> .)

    guardarIDs                     shift and go to state 72

state 45

    (21) param -> tipo . listapaID
    (22) listapaID -> . ID guardarIDs maspaID maspaTip

    ID              shift and go to state 74

    listapaID                      shift and go to state 73

state 46

    (19) funcion -> FUNC tipo ID funcAgregar ( param . ) bloquefunc

    )               shift and go to state 75


state 47

    (91) whiles -> WHILE ( . expresion ) bloque
    (60) expresion -> . exp > exp
    (61) expresion -> . exp < exp
    (62) expresion -> . exp MENORIGUAL exp
    (63) expresion -> . exp MAYORIGUAL exp
    (64) expresion -> . exp IGUALIGUAL exp
    (65) expresion -> . exp DIFERENTE exp
    (66) expresion -> . exp COOR exp
    (67) expresion -> . exp COAND exp
    (68) exp -> . fondoFalso expresion finFondoFalso
    (69) exp -> . fondoFalso varcte operacion finFondoFalso
    (70) exp -> . varcte operacion
    (71) exp -> . varcte
    (72) exp -> . empty
    (73) fondoFalso -> . (
    (92) varcte -> . recibe_ID
    (93) varcte -> . recibe_CTF
    (94) varcte -> . recibe_CTI
    (95) varcte -> . recibe_CTS
    (96) varcte -> . recibe_TRUE
    (97) varcte -> . recibe_FALSE
    (118) empty -> .
    (98) recibe_ID -> . ID
    (99) recibe_CTF -> . CTF
    (100) recibe_CTI -> . CTI
    (101) recibe_CTS -> . CTS
    (102) recibe_TRUE -> . TRUE
    (103) recibe_FALSE -> . FALSE

    (               shift and go to state 53
    >               reduce using rule 118 (empty -> .)
    <               reduce using rule 118 (empty -> .)
    MENORIGUAL      reduce using rule 118 (empty -> .)
    MAYORIGUAL      reduce using rule 118 (empty -> .)
    IGUALIGUAL      reduce using rule 118 (empty -> .)
    DIFERENTE       reduce using rule 118 (empty -> .)
    COOR            reduce using rule 118 (empty -> .)
    COAND           reduce using rule 118 (empty -> .)
    ID              shift and go to state 85
    CTF             shift and go to state 88
    CTI             shift and go to state 78
    CTS             shift and go to state 76
    TRUE            shift and go to state 77
    FALSE           shift and go to state 87
